1st Try fix design Safari - Name animation not showing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -260,6 +260,7 @@ ul li a {
         font-size: 18vw;
         max-width: 100%;
         height: 100vh;
+        color: white;
     }
     header {
         display: none;
